samples/_failures_safe/1761419351_564c8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_286f1220.c: In function ‘main’:
./samples/SAFE/__tmp_286f1220.c:157:21: error: expected declaration or statement at end of input
  157 |                     print_matrix(&result, "A * B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_286f1220.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_286f1220.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_286f1220.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_286f1220.c:157:21: error: expected declaration or statement at end of input
